--- a/infection.json.dist
+++ b/infection.json.dist
@@ -11,6 +11,7 @@
         }
     },
     "mutators": {
-        "@default": true
+        "@default": true,
+        "CloneRemoval": false
     }
 }
