--- a/.gitignore
+++ b/.gitignore
@@ -22,12 +22,13 @@ composer.phar
 # Mac DS_Store Files
 .DS_Store
 
-# phpunit itself is not needed
+# phpunit
 phpunit.phar
-# local phpunit config
 /phpunit.xml
-# phpunit cache
 .phpunit.result.cache
 
-# node_modules
+#code_coverage
+/code_coverage
+
+#node_modules
 /node_modules
